product permission check
