# storage/api-docs/api-docs.json
@@ -299,7 +299,12 @@
                     "default": {
                         "description": "Response Error"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
